--- a/en.html
+++ b/en.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Redirect Example</title>
-  <meta property="og:title" content="Draw My Today">
+  <title>🎨 Draw My Today</title>
+  <meta property="og:title" content="🎨 Draw My Today">
   <meta property="og:description" content="AI Drawing Picture">
   <meta property="og:url" content="https://onelink.to/tz9ka6">
-  <meta property="og:image" content="https://avatars.githubusercontent.com/u/26322627?v=4">
+  <meta property="og:image" content="/assets/en_1024x500.png">
   <script>
     window.onload = function () {
       window.location.href = "https://onelink.to/tz9ka6";
@@ -16,5 +16,4 @@
 
 <body>
 </body>
-
 </html>
