--- a/en.html
+++ b/en.html
@@ -4,7 +4,7 @@
 <head>
   <title>🎨 Draw My Today</title>
   <meta property="og:title" content="🎨 Draw My Today">
-  <meta property="og:description" content="AI Drawing Picture">
+  <meta property="og:description" content="AI Picture Diary">
   <meta property="og:url" content="https://onelink.to/tz9ka6">
   <meta property="og:image" content="/assets/en_1024x500.png">
   <script>
@@ -16,4 +16,5 @@
 
 <body>
 </body>
+
 </html>
