--- a/en.html
+++ b/en.html
@@ -2,11 +2,27 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>🎨 Draw My Today</title>
+  <meta name="description" content="AI Picture Diary">
+  
+  <!-- Twitter 메타태그 -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="🎨 Draw My Today">
+  <meta name="twitter:description" content="AI Picture Diary">
+  <meta name="twitter:image" content="https://draw-my-today.netlify.app/assets/en_1024x500.png">
+  
+  <!-- Open Graph 메타태그 -->
   <meta property="og:title" content="🎨 Draw My Today">
   <meta property="og:description" content="AI Picture Diary">
+  <meta property="og:image" content="https://draw-my-today.netlify.app/assets/en_1024x500.png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="500">
   <meta property="og:url" content="https://onelink.to/tz9ka6">
-  <meta property="og:image" content="/assets/en_1024x500.png">
+  
+  <!-- 웹 페이지 이미지 설정 -->
+  <link rel="image_src" href="https://draw-my-today.netlify.app/assets/en_1024x500.png">
+  
   <script>
     window.onload = function () {
       window.location.href = "https://onelink.to/tz9ka6";
