--- a/ko.html
+++ b/ko.html
@@ -2,11 +2,27 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>🎨 오늘 하루를 그려줘</title>
+  <meta name="description" content="AI 그림 일기">
+  
+  <!-- Twitter 메타태그 -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="🎨 오늘 하루를 그려줘">
+  <meta name="twitter:description" content="AI 그림 일기">
+  <meta name="twitter:image" content="https://draw-my-today.netlify.app/assets/ko_1024x500.png">
+  
+  <!-- Open Graph 메타태그 -->
   <meta property="og:title" content="🎨 오늘 하루를 그려줘">
   <meta property="og:description" content="AI 그림 일기">
+  <meta property="og:image" content="https://draw-my-today.netlify.app/assets/ko_1024x500.png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="500">
   <meta property="og:url" content="https://onelink.to/tz9ka6">
-  <meta property="og:image" content="/assets/ko_1024x500.png">
+  
+  <!-- 웹 페이지 이미지 설정 -->
+  <link rel="image_src" href="https://draw-my-today.netlify.app/assets/ko_1024x500.png">
+  
   <script>
     window.onload = function () {
       window.location.href = "https://onelink.to/tz9ka6";
