--- a/en.html
+++ b/en.html
@@ -13,12 +13,19 @@
   <meta name="twitter:image" content="https://draw-my-today.netlify.app/assets/en_1024x500.png">
   
   <!-- Open Graph 메타태그 -->
+  <meta property="og:type" content="website">
   <meta property="og:title" content="🎨 Draw My Today">
   <meta property="og:description" content="AI Picture Diary">
   <meta property="og:image" content="https://draw-my-today.netlify.app/assets/en_1024x500.png">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="500">
   <meta property="og:url" content="https://onelink.to/tz9ka6">
+  <meta property="fb:app_id" content="311675644633851">
+  
+  <!-- Google / 검색 엔진 메타 태그 설정 -->
+  <meta itemprop="name" content="Draw My Today">
+  <meta itemprop="description" content="AI Picture Diary">
+  <meta itemprop="image" content="https://draw-my-today.netlify.app/assets/en_1024x500.png">
   
   <!-- 웹 페이지 이미지 설정 -->
   <link rel="image_src" href="https://draw-my-today.netlify.app/assets/en_1024x500.png">
