Add ko og:type & fb:app_id & google search engine tag

--- a/ko.html
+++ b/ko.html
@@ -13,12 +13,14 @@
   <meta name="twitter:image" content="https://draw-my-today.netlify.app/assets/ko_1024x500.png">
   
   <!-- Open Graph 메타태그 -->
+  <meta property="og:type" content="website">
   <meta property="og:title" content="🎨 오늘 하루를 그려줘">
   <meta property="og:description" content="AI 그림 일기">
   <meta property="og:image" content="https://draw-my-today.netlify.app/assets/ko_1024x500.png">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="500">
   <meta property="og:url" content="https://onelink.to/tz9ka6">
+  <meta property="fb:app_id" content="311675644633851">
   
   <!-- 웹 페이지 이미지 설정 -->
   <link rel="image_src" href="https://draw-my-today.netlify.app/assets/ko_1024x500.png">
