Add ko google search engine tag

--- a/ko.html
+++ b/ko.html
@@ -21,6 +21,11 @@
   <meta property="og:image:height" content="500">
   <meta property="og:url" content="https://onelink.to/tz9ka6">
   <meta property="fb:app_id" content="311675644633851">
+
+  <!-- Google / 검색 엔진 메타 태그 설정 -->
+  <meta itemprop="name" content="오늘 하루를 그려줘">
+  <meta itemprop="description" content="AI 그림 일기">
+  <meta itemprop="image" content="https://draw-my-today.netlify.app/assets/ko_1024x500.png">
   
   <!-- 웹 페이지 이미지 설정 -->
   <link rel="image_src" href="https://draw-my-today.netlify.app/assets/ko_1024x500.png">
