--- a/en.html
+++ b/en.html
@@ -17,8 +17,8 @@
   <meta property="og:title" content="🎨 Draw My Today">
   <meta property="og:description" content="AI Picture Diary">
   <meta property="og:image" content="https://draw-my-today.netlify.app/assets/en_1024x500.png">
-  <meta property="og:image:width" content="1024">
-  <meta property="og:image:height" content="500">
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:url" content="https://onelink.to/tz9ka6">
   <meta property="fb:app_id" content="311675644633851">
   
